--- a/less/modal.less
+++ b/less/modal.less
@@ -10,7 +10,7 @@
 @popupDuration: 400ms;
 @gray: #8e8e93;
 .modal-overlay, .preloader-indicator-overlay, .popup-overlay {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
@@ -30,7 +30,7 @@
 }
 .modal {
     width: 13.5rem;
-    position: absolute;
+    position: fixed;
     z-index: 11000;
     left: 50%;
     margin-left: -6.75rem;
